--- a/templates/presentacion.html
+++ b/templates/presentacion.html
@@ -8,8 +8,8 @@
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-		<title>Prueba!!</title>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+		<title>BBVA 2018</title>
 		<style>
 			body {
 				color: #495057;
@@ -41,6 +41,7 @@
 				</div>
 			</div>
 
+		
 			<!-- contenedor temporizador -->
 			<div id="countdown" class="row shadow-sm p-3 text-center">
 				
@@ -66,23 +67,34 @@
 						<input type="number" class="input-number form-control" data="minutes" placeholder="mm" min="0">
 						<input type="number" class="input-number form-control" data="seconds" placeholder="ss" min="0">
 						<div class="input-group-append" id="button-addon4">
-							<button type="button" class="btn btn-outline-info startButton">Start</button>
-							<button type="button" class="btn btn-outline-info pauseButton">Pause</button>
-							<button type="button" class="btn btn-outline-info stopButton">Stop</button>
-							<button type="button" class="btn btn-outline-info resetButton">Reset</button>
+							<button type="button" class="btn btn-outline-info startButton" title="play">
+								<i class="fas fa-play"></i>
+							</button>
+							<button type="button" class="btn btn-outline-info pauseButton" title="pause">
+								<i class="fas fa-pause"></i>
+							</button>
+							<button type="button" class="btn btn-outline-info stopButton" title="stop">
+								<i class="fas fa-stop"></i>
+							</button>
+							<button type="button" class="btn btn-outline-info resetButton" title="reset">
+								<i class="fas fa-redo-alt"></i>
+							</button>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		
+
 			<!-- contenedor imagenes -->
 			<div class="row mt-3">
 				<div class="col-6 shadow-sm p-2">
-					<img class="mw-100" src="{{ MEDIA_URL }}{{ params.path_image_fixed }}">
+					<img class="w-100" src="{{ MEDIA_URL }}{{ params.path_image_fixed }}">
 				</div>
-				<div class="col-6 shadow-sm p-2">
-					<img class="mw-100" src="{{ MEDIA_URL }}{{ params.path_image_fixed }}" class="img-fluid" alt="Responsive image">
+				<div id="container-dynamic-img" class="col-6 shadow-sm p-2">
+					<img class="w-100" src="{{ MEDIA_URL }}{{ params.path_image_fixed }}">
+				</div>
+				<div class="col-12">
+					<button id="slider-trigger" class="btn btn-lg btn-outline-info"><i class="fas fa-camera"></i></button>
 				</div>
 			</div>
 		</div>
@@ -104,10 +116,16 @@
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="{% static 'js/jquery/jquery.min.js' %}"></script>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script src="{% static 'js/easytimer.js' %}"></script>
 		<script src="{% static 'js/timer-custom.js' %}"></script>
+		<script src="{% static 'js/slider-custom.js' %}"></script>
+
+		<script>
+			var slideDuration = parseInt('{{ params.time_duration }}');
+		</script>
 	</body>
 </html>
