--- a/templates/frontend/base_administration.html
+++ b/templates/frontend/base_administration.html
@@ -13,12 +13,15 @@
 
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-	<a class="navbar-brand" href="#">BBVA</a>
+	<a class="navbar-brand" href="{% url 'home' %}">BBVA</a>
 
 	<div class="navbar" id="navbarsExampleDefault">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="{% url 'parameters:create' %}">Nuevo</a>
+				<a class="nav-link" href="{% url 'parameters:create' %}">Nuevo Parámetro</a>
+			</li>
+			<li class="nav-item active">
+				<a class="nav-link" href="{% url 'activity:create' %}">Nueva Actividad</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="{% url 'parameters:list' %}">Lista</a>
@@ -34,7 +37,7 @@
 <main role="main" class="container">
 	<div class="row justify-content-center">
 		<div class="col-12 col-md-10">
-			<h1 class="mt-2">Parámetros del Slider</h1>
+			<h1 class="mt-2">Parámetros de Presentación</h1>
 			<hr class="mt-0 mb-4">
 			{% block content %}
 			{% endblock %}
