Se agrega audio 'beep' para pocos segundos faltantes.

--- a/templates/presentacion.html
+++ b/templates/presentacion.html
@@ -129,7 +129,7 @@
 			</div>
 		</div>
 
-		<audio id="flute" src="{% static 'audio/flute_c_long_01.wav' %}" preload="auto"></audio>
+		<audio id="flute" src="{% static 'audio/beep0.wav' %}" preload="auto"></audio>
 		<audio id="clock-alarm2" src="{% static 'audio/clock-alarm2.wav' %}" preload="auto"></audio>
 
 		<!-- Optional JavaScript -->
