Se agrega uploader de archivos para imágenes de galería

--- a/templates/frontend/base_administration.html
+++ b/templates/frontend/base_administration.html
@@ -27,7 +27,7 @@
 				<a class="nav-link" href="{% url 'parameters:list' %}">Lista</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Galería</a>
+				<a class="nav-link" href="{% url 'gallery:upload' %}">Galería</a>
 			</li>
 		</ul>
 	</div>
